syntax = "proto3";

package hostrewrite.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/hostrewrite";

import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;

// Policies for rewriting the Host Header
// Based on Envoy's host_rewrite from https://www.envoyproxy.io/docs/envoy/latest/api-v2/api/v2/route/route.proto
message HostRewrite {
    oneof host_rewrite_type {
        // Indicates that during forwarding, the host header will be swapped with this value.
        string host_rewrite = 1;
    };
}
