syntax = "proto3";

package transformation.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/transformation";

import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;

// if set, prefix_rewrite will be used to rewrite the matched HTTP Path prefix on requests to this value.
message PrefixRewrite {
    // Set to an empty string to remove the matched HTTP Path prefix
    string prefix_rewrite = 1;
}
